Rename field in status (#26200)
