# api/generated/cluster/smartnic_schema.go
@@ -98,51 +98,51 @@ var typesMapSmartnic = map[string]*api.Struct{
 		},
 
 		CLITags: map[string]api.CLIInfo{
-			"DSCSku":                 api.CLIInfo{Path: "Status.DSCSku", Skip: false, Insert: "", Help: ""},
-			"DSCVersion":             api.CLIInfo{Path: "Status.DSCVersion", Skip: false, Insert: "", Help: ""},
-			"address-families":       api.CLIInfo{Path: "Status.ControlPlaneStatus.BGPStatus[].AddressFamilies", Skip: false, Insert: "", Help: ""},
-			"adm-phase-reason":       api.CLIInfo{Path: "Status.AdmissionPhaseReason", Skip: false, Insert: "", Help: ""},
-			"admission-phase":        api.CLIInfo{Path: "Status.AdmissionPhase", Skip: false, Insert: "", Help: ""},
-			"admit":                  api.CLIInfo{Path: "Spec.Admit", Skip: false, Insert: "", Help: ""},
-			"api-version":            api.CLIInfo{Path: "APIVersion", Skip: false, Insert: "", Help: ""},
-			"controllers":            api.CLIInfo{Path: "Spec.Controllers", Skip: false, Insert: "", Help: ""},
-			"default-gw":             api.CLIInfo{Path: "Spec.IPConfig.DefaultGW", Skip: false, Insert: "", Help: ""},
-			"dns-servers":            api.CLIInfo{Path: "Spec.IPConfig.DNSServers", Skip: false, Insert: "", Help: ""},
-			"dscprofile":             api.CLIInfo{Path: "Spec.DSCProfile", Skip: false, Insert: "", Help: ""},
-			"fw-major-ver":           api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.FwMajorVersion", Skip: false, Insert: "", Help: ""},
-			"fw-minor-ver":           api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.FwMinorVersion", Skip: false, Insert: "", Help: ""},
-			"generation-id":          api.CLIInfo{Path: "GenerationID", Skip: false, Insert: "", Help: ""},
-			"host":                   api.CLIInfo{Path: "Status.Host", Skip: false, Insert: "", Help: ""},
-			"id":                     api.CLIInfo{Path: "Spec.ID", Skip: false, Insert: "", Help: ""},
-			"interfaces":             api.CLIInfo{Path: "Status.Interfaces", Skip: false, Insert: "", Help: ""},
-			"ip-address":             api.CLIInfo{Path: "Spec.IPConfig.IPAddress", Skip: false, Insert: "", Help: ""},
-			"is-connected-to-venice": api.CLIInfo{Path: "Status.IsConnectedToVenice", Skip: false, Insert: "", Help: ""},
-			"kind":                   api.CLIInfo{Path: "Kind", Skip: false, Insert: "", Help: ""},
-			"labels":                 api.CLIInfo{Path: "Labels", Skip: false, Insert: "", Help: ""},
-			"last-transition-time":   api.CLIInfo{Path: "Status.Conditions[].LastTransitionTime", Skip: false, Insert: "", Help: ""},
-			"message":                api.CLIInfo{Path: "Status.Conditions[].Message", Skip: false, Insert: "", Help: ""},
-			"mgmt-mode":              api.CLIInfo{Path: "Spec.MgmtMode", Skip: false, Insert: "", Help: ""},
-			"mgmt-vlan":              api.CLIInfo{Path: "Spec.MgmtVlan", Skip: false, Insert: "", Help: ""},
-			"name":                   api.CLIInfo{Path: "Name", Skip: false, Insert: "", Help: ""},
-			"namespace":              api.CLIInfo{Path: "Namespace", Skip: false, Insert: "", Help: ""},
-			"network-mode":           api.CLIInfo{Path: "Spec.NetworkMode", Skip: false, Insert: "", Help: ""},
-			"peer-address":           api.CLIInfo{Path: "Status.ControlPlaneStatus.BGPStatus[].PeerAddress", Skip: false, Insert: "", Help: ""},
-			"primary-mac":            api.CLIInfo{Path: "Status.PrimaryMAC", Skip: false, Insert: "", Help: ""},
-			"reason":                 api.CLIInfo{Path: "Status.Conditions[].Reason", Skip: false, Insert: "", Help: ""},
-			"remote-asn":             api.CLIInfo{Path: "Status.ControlPlaneStatus.BGPStatus[].RemoteASN", Skip: false, Insert: "", Help: ""},
-			"resource-version":       api.CLIInfo{Path: "ResourceVersion", Skip: false, Insert: "", Help: ""},
-			"routing-config":         api.CLIInfo{Path: "Spec.RoutingConfig", Skip: false, Insert: "", Help: ""},
-			"self-link":              api.CLIInfo{Path: "SelfLink", Skip: false, Insert: "", Help: ""},
-			"serial-num":             api.CLIInfo{Path: "Status.SerialNum", Skip: false, Insert: "", Help: ""},
-			"state":                  api.CLIInfo{Path: "Status.ControlPlaneStatus.BGPStatus[].State", Skip: false, Insert: "", Help: ""},
-			"status":                 api.CLIInfo{Path: "Status.Conditions[].Status", Skip: false, Insert: "", Help: ""},
-			"tenant":                 api.CLIInfo{Path: "Tenant", Skip: false, Insert: "", Help: ""},
-			"type":                   api.CLIInfo{Path: "Status.Conditions[].Type", Skip: false, Insert: "", Help: ""},
-			"unhealthy-services":     api.CLIInfo{Path: "Status.UnhealthyServices", Skip: false, Insert: "", Help: ""},
-			"uuid":                   api.CLIInfo{Path: "UUID", Skip: false, Insert: "", Help: ""},
-			"vendor":                 api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.Vendor", Skip: false, Insert: "", Help: ""},
-			"version":                api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.Version", Skip: false, Insert: "", Help: ""},
-			"version-mismatch":       api.CLIInfo{Path: "Status.VersionMismatch", Skip: false, Insert: "", Help: ""},
+			"DSCSku":               api.CLIInfo{Path: "Status.DSCSku", Skip: false, Insert: "", Help: ""},
+			"DSCVersion":           api.CLIInfo{Path: "Status.DSCVersion", Skip: false, Insert: "", Help: ""},
+			"address-families":     api.CLIInfo{Path: "Status.ControlPlaneStatus.BGPStatus[].AddressFamilies", Skip: false, Insert: "", Help: ""},
+			"adm-phase-reason":     api.CLIInfo{Path: "Status.AdmissionPhaseReason", Skip: false, Insert: "", Help: ""},
+			"admission-phase":      api.CLIInfo{Path: "Status.AdmissionPhase", Skip: false, Insert: "", Help: ""},
+			"admit":                api.CLIInfo{Path: "Spec.Admit", Skip: false, Insert: "", Help: ""},
+			"api-version":          api.CLIInfo{Path: "APIVersion", Skip: false, Insert: "", Help: ""},
+			"controllers":          api.CLIInfo{Path: "Spec.Controllers", Skip: false, Insert: "", Help: ""},
+			"default-gw":           api.CLIInfo{Path: "Spec.IPConfig.DefaultGW", Skip: false, Insert: "", Help: ""},
+			"dns-servers":          api.CLIInfo{Path: "Spec.IPConfig.DNSServers", Skip: false, Insert: "", Help: ""},
+			"dscprofile":           api.CLIInfo{Path: "Spec.DSCProfile", Skip: false, Insert: "", Help: ""},
+			"fw-major-ver":         api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.FwMajorVersion", Skip: false, Insert: "", Help: ""},
+			"fw-minor-ver":         api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.FwMinorVersion", Skip: false, Insert: "", Help: ""},
+			"generation-id":        api.CLIInfo{Path: "GenerationID", Skip: false, Insert: "", Help: ""},
+			"host":                 api.CLIInfo{Path: "Status.Host", Skip: false, Insert: "", Help: ""},
+			"id":                   api.CLIInfo{Path: "Spec.ID", Skip: false, Insert: "", Help: ""},
+			"interfaces":           api.CLIInfo{Path: "Status.Interfaces", Skip: false, Insert: "", Help: ""},
+			"ip-address":           api.CLIInfo{Path: "Spec.IPConfig.IPAddress", Skip: false, Insert: "", Help: ""},
+			"is-connected-to-psm":  api.CLIInfo{Path: "Status.IsConnectedToPSM", Skip: false, Insert: "", Help: ""},
+			"kind":                 api.CLIInfo{Path: "Kind", Skip: false, Insert: "", Help: ""},
+			"labels":               api.CLIInfo{Path: "Labels", Skip: false, Insert: "", Help: ""},
+			"last-transition-time": api.CLIInfo{Path: "Status.Conditions[].LastTransitionTime", Skip: false, Insert: "", Help: ""},
+			"message":              api.CLIInfo{Path: "Status.Conditions[].Message", Skip: false, Insert: "", Help: ""},
+			"mgmt-mode":            api.CLIInfo{Path: "Spec.MgmtMode", Skip: false, Insert: "", Help: ""},
+			"mgmt-vlan":            api.CLIInfo{Path: "Spec.MgmtVlan", Skip: false, Insert: "", Help: ""},
+			"name":                 api.CLIInfo{Path: "Name", Skip: false, Insert: "", Help: ""},
+			"namespace":            api.CLIInfo{Path: "Namespace", Skip: false, Insert: "", Help: ""},
+			"network-mode":         api.CLIInfo{Path: "Spec.NetworkMode", Skip: false, Insert: "", Help: ""},
+			"peer-address":         api.CLIInfo{Path: "Status.ControlPlaneStatus.BGPStatus[].PeerAddress", Skip: false, Insert: "", Help: ""},
+			"primary-mac":          api.CLIInfo{Path: "Status.PrimaryMAC", Skip: false, Insert: "", Help: ""},
+			"reason":               api.CLIInfo{Path: "Status.Conditions[].Reason", Skip: false, Insert: "", Help: ""},
+			"remote-asn":           api.CLIInfo{Path: "Status.ControlPlaneStatus.BGPStatus[].RemoteASN", Skip: false, Insert: "", Help: ""},
+			"resource-version":     api.CLIInfo{Path: "ResourceVersion", Skip: false, Insert: "", Help: ""},
+			"routing-config":       api.CLIInfo{Path: "Spec.RoutingConfig", Skip: false, Insert: "", Help: ""},
+			"self-link":            api.CLIInfo{Path: "SelfLink", Skip: false, Insert: "", Help: ""},
+			"serial-num":           api.CLIInfo{Path: "Status.SerialNum", Skip: false, Insert: "", Help: ""},
+			"state":                api.CLIInfo{Path: "Status.ControlPlaneStatus.BGPStatus[].State", Skip: false, Insert: "", Help: ""},
+			"status":               api.CLIInfo{Path: "Status.Conditions[].Status", Skip: false, Insert: "", Help: ""},
+			"tenant":               api.CLIInfo{Path: "Tenant", Skip: false, Insert: "", Help: ""},
+			"type":                 api.CLIInfo{Path: "Status.Conditions[].Type", Skip: false, Insert: "", Help: ""},
+			"unhealthy-services":   api.CLIInfo{Path: "Status.UnhealthyServices", Skip: false, Insert: "", Help: ""},
+			"uuid":                 api.CLIInfo{Path: "UUID", Skip: false, Insert: "", Help: ""},
+			"vendor":               api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.Vendor", Skip: false, Insert: "", Help: ""},
+			"version":              api.CLIInfo{Path: "Status.SystemInfo.BiosInfo.Version", Skip: false, Insert: "", Help: ""},
+			"version-mismatch":     api.CLIInfo{Path: "Status.VersionMismatch", Skip: false, Insert: "", Help: ""},
 		},
 	},
 	"cluster.DistributedServiceCardSpec": &api.Struct{
@@ -196,7 +196,7 @@ var typesMapSmartnic = map[string]*api.Struct{
 
 			"ControlPlaneStatus": api.Field{Name: "ControlPlaneStatus", CLITag: api.CLIInfo{ID: "control-plane-status", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "control-plane-status", Pointer: true, Slice: false, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "cluster.DSCControlPlaneStatus"},
 
-			"IsConnectedToVenice": api.Field{Name: "IsConnectedToVenice", CLITag: api.CLIInfo{ID: "is-connected-to-venice", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "is-connected-to-venice", Pointer: false, Slice: false, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "TYPE_BOOL"},
+			"IsConnectedToPSM": api.Field{Name: "IsConnectedToPSM", CLITag: api.CLIInfo{ID: "is-connected-to-psm", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "is-connected-to-psm", Pointer: false, Slice: false, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "TYPE_BOOL"},
 
 			"UnhealthyServices": api.Field{Name: "UnhealthyServices", CLITag: api.CLIInfo{ID: "unhealthy-services", Path: "", Skip: false, Insert: "", Help: ""}, JSONTag: "unhealthy-services", Pointer: false, Slice: true, Mutable: true, Map: false, Inline: false, FromInline: false, KeyType: "", Type: "TYPE_STRING"},
 		},
